--- a/index.html
+++ b/index.html
@@ -867,12 +867,9 @@ Ensure divs use `<div id="ID" class="page">` and toggle visibility via JS.
       <!-- Embedded Support Form -->
       <div class="row mt-4">
         <div class="col-md">
-          <div class="ratio ratio-4x3" style="max-width: 100%">
-            <iframe
-              src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsWOyxEjajBLZtrQAAAAAAAAAAAAa_eBfvaBUOU4zQ0wzV1IVOFkxM05SUK8yVkNBM1BWVS4u&embed=true"
-              allowfullscreen style="border: none">
-            </iframe>
-          </div>
+          <iframe width="100%" height="480px" src="https://forms.cloud.microsoft/e/gGR72uzjcc?embed=true"
+            frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh"
+            allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>
         </div>
       </div>
     </div>
